build_log.txt
Processing esp32-c3-devkitm-1 (platform: espressif32; board: esp32-c3-devkitm-1; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-c3-devkitm-1.html
PLATFORM: Espressif 32 (6.13.0) > Espressif ESP32-C3-DevKitM-1
HARDWARE: ESP32C3 160MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-builtin, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20017.241212+sha.dcc1105b 
 - tool-esptoolpy @ 2.41100.0 (4.11.0) 
 - toolchain-riscv32-esp @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 42 compatible libraries
Scanning dependencies...
Dependency Graph
|-- OneButton @ 2.6.2
|-- ArduinoJson @ 7.4.3
|-- U8g2 @ 2.36.18
|-- ChronosESP32 @ 1.9.0
|-- WiFiManager @ 2.0.17
|-- ESPAsyncWebServer @ 3.10.0
|-- FS @ 2.0.0
|-- HTTPClient @ 2.0.0
|-- Preferences @ 2.0.0
|-- SPIFFS @ 2.0.0
|-- WiFi @ 2.0.0
|-- Wire @ 2.0.0
Building in release mode
Compiling .pio\build\esp32-c3-devkitm-1\src\main.cpp.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1306_96x16.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1306_96x40.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1309.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1312.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1315_128x64_noname.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1316.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1317.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1318.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1320.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1322.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1325.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1326.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1327.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1329.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1362.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1362z.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1363.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1606_172x72.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_ssd1607_200x200.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7301.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7302.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7305.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7511.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st75160.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st75161.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st75256.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7528.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st75320.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7539.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7565.c.o
src/main.cpp: In function 'bool openWiFiManager()':
src/main.cpp:78:3: error: 'saveWifiList' was not declared in this scope
   saveWifiList();
   ^~~~~~~~~~~~
src/main.cpp:78:3: note: suggested alternative: 'wifiList'
   saveWifiList();
   ^~~~~~~~~~~~
   wifiList
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7567.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7571.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7586s_erc240160.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7586s_jlx320160.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7586s_jlx384160.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7586s_md240128.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7586s_s028hn118a.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7586s_ymc240160.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7588.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_st7920.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_t6963.c.o
Compiling .pio\build\esp32-c3-devkitm-1\libf29\U8g2\clib\u8x8_d_uc1601.c.o
*** [.pio\build\esp32-c3-devkitm-1\src\main.cpp.o] Error 1
========================= [FAILED] Took 53.95 seconds =========================
